Fix the z-index of elements window
The tooltips from the elements window toolbar are hidden below the top menu otherwise.

--- a/app/assets/stylesheets/alchemy/elements.scss
+++ b/app/assets/stylesheets/alchemy/elements.scss
@@ -2,6 +2,7 @@
   position: absolute;
   right: 0;
   top: $top-menu-height;
+  z-index: 20;
   width: $elements-window-width;
   height: calc(100vh - #{$top-menu-height});
   border-left: $default-border;
